<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragments.settings.FavoriteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/alFavAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imgFavSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_search"
                        app:tint="@color/colorAccent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/arab_font"
                        android:text="@string/favorite"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/imgFavBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/colorAccent" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcFavProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alFavAppbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:listitem="@layout/property_style"/>

        <LinearLayout
            android:id="@+id/llEmptyFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alFavAppbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="112dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_impty_fav"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/empty_fav"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/arab_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/empty_fav_det"
                android:textColor="@color/gray"
                android:textSize="13sp"
                android:fontFamily="@font/arab_font"/>

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="91dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <Button
                    android:id="@+id/btnShop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/arab_font"
                    android:text="@string/go_shop"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>